--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,8 @@ img {
   padding-right: 15px;
   margin: 0 auto;
 
-  outline: 2px solid tomato;
-  outline-offset: -2px;
+  /* outline: 2px solid tomato;
+  outline-offset: -2px; */
 }
 
 .section {
@@ -354,6 +354,9 @@ img {
 }
 
 .card-title {
+  margin-top: 20px;
+  margin-left: 24px;
+  margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -361,6 +364,8 @@ img {
 }
 
 .card-text {
+  margin-left: 24px;
+  padding-bottom: 20px;
   font-size: 16px;
   line-height: 1.88;
   color: var(--text-color);
